macros/tests/builder/builder_fail.rs
use macros::Builder;

#[derive(Builder)]
enum Foo {
    A,
    B,
}

fn main() {}
